--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@line/liff": "^2.27.2",
+    "@react-google-maps/api": "^2.20.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
