--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@line/liff": "^2.27.2",
     "@react-google-maps/api": "^2.20.7",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
